--- a/build.xml
+++ b/build.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="ISO-8859-15"?>
-
 <!--*******************************{begin:header}******************************
-                  spssio - http://code.google.com/p/spssio/
+               spssio - https://github.com/jani-hautamaki/spssio               
 *******************************************************************************
 
         Java classes for reading and writing
         SPSS/PSPP Portable and System files
-
-        Copyright (C) 2013-2014 Jani Hautamaki <jani.hautamaki@hotmail.com>
-
+  
+        Copyright (C) 2013-2016 Jani Hautamaki <jani.hautamaki@hotmail.com>
+  
         Licensed under the terms of GNU General Public License v3.
-
+  
         You should have received a copy of the GNU General Public License v3
         along with this program as the file LICENSE.txt; if not, please see
         http://www.gnu.org/licenses/gpl-3.0.html
-
+  
 **********************************{end:header}******************************-->
 
 <project name="spssio" default="build" basedir=".">
